--- a/style.css
+++ b/style.css
@@ -1,50 +1,29 @@
 body {
-        margin: 0;
-        padding-top: 800px;
-        text-align: center;
+    text-align: center;
+    background-color: black;
 }
-.profile {
-    border-radius:50%;
-}
-#welcome {
-position:absolute;
-bottom: 0;
-background: linear-gradient(#60ebeb 0%, #27ae60 100%);;
-display:table;
-width: 100%;
-height: 100%;
-font-family: 'Lobster', cursive;
-}
+
 h1 {
     font-size: 40px;
     font-family: sans-serif;
     font-weight: 300;
 }
-#name { font-size: 50px; font-family: 'Lobster', cursive; }
- h2 { font-size: 30px; font-weight: 300; font-family: monospace; }
-  #bio { font-family: 'Lobster', cursive; padding: 50px; }
-.parallax-inner { display: table-cell; vertical-align: middle; }
 
-.menu {
-    position: fixed;
-    margin-top: 0px;
-    z-index: 10 ;
-    cursor: pointer;
-    background-color: white;
-    width: 100%;
-    top: 0px;
+#intro{
+    background-color: rgb(182, 220, 238);
 }
-.links {
-    display: inline;
-    padding-right: 25px;
-    padding-left: 36px;
-    font-family: fantasy;
-    font-size: 20px;
+
+#origami1{
+    background-color: lightcoral;
 }
-.links:hover {
-font-size: 25px;
-text-decoration: underline;
+
+#origami2{
+background-color: lightcoral;
 }
-a {
-    text-decoration: none;
+
+.line {
+    height: 6px;
+    background-color: #000;
+    width: 70px;
+    margin: 8px auto;
 }
